[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/World.gd" type="Script" id=1]
[ext_resource path="res://script/EnemyPath.gd" type="Script" id=2]
[ext_resource path="res://script/MainScene.gd" type="Script" id=3]
[ext_resource path="res://script/CreateObject.gd" type="Script" id=4]
[ext_resource path="res://script/EnemyAI.gd" type="Script" id=5]
[ext_resource path="res://script/PlayerControl.gd" type="Script" id=6]
[ext_resource path="res://scene/MainGUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://script/PlayingBoard.gd" type="Script" id=8]
[ext_resource path="res://script/MouseControl.gd" type="Script" id=9]
[ext_resource path="res://script/TilePainter.gd" type="Script" id=10]
[ext_resource path="res://script/RemoveObject.gd" type="Script" id=11]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="World" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="EnemyAI" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="EnemyPath" type="Node2D" parent="EnemyAI"]
script = ExtResource( 2 )

[node name="CreateObject" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PlayerControl" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="MainGUI" parent="." instance=ExtResource( 7 )]

[node name="PlayingBoard" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="MouseControl" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="TilePainter" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="RemoveObject" type="Node2D" parent="."]
script = ExtResource( 11 )
